# api_whataa

./: .env  Cargo.toml  my_database.db
migrations/: 20250916153840_users.sql  20250916153944_roles.sql  20250916154420_permissions.sql  20250916154542_permission_role.sql  20250920233042_fournisseurs.sql  20250920233125_clients.sql  20250920233157_documents.sql  20250920233220_reglements.sql  20250920233325_ligne_documents.sql  20250920233354_articles.sql  20250920233414_familles.sql  20250920233437_sous_familles.sql  20250920233516_marques.sql  20250920233540_unites.sql  20250920233630_mode_paiements.sql  20250920233657_caisses.sql  20250920233715_depenses.sql  20250920233736_type_depenses.sql  20250920233814_compagnies.sql  20250920233834_admins.sql  20250920233902_reglement_documents.sql  20250920233937_depots.sql  20250920234007_boutiques.sql  20250920234220_article_boutiques.sql  20251126151847_init.sql  20251127124818_articles.sql  20251127124934_users.sql  20251127125000_roles.sql  20251127125028_permissions.sql  20251127125058_role_user.sql  20251127125136_permission_role.sql  20251127125245_boutiques.sql  20251127125310_depots.sql  20251127125315_tiers.sql  20251127125332_documents.sql  20251127125351_mode_paiements.sql  20251127125404_caisses.sql  20251127125501_reglements.sql  20251127125519_ligne_documents.sql  20251127125532_familles.sql  (+8 more)
src/: auth.rs  config.rs  db.rs  errors.rs  main.rs  middleware.rs  routes.rs
src/handlers/: auth.rs  client_handler.rs  compagny_handler.rs  document_handler.rs  famille.rs  fournisseur_handler.rs  helpers.rs  mod.rs  mode_paiement.rs  product_handler.rs  reglement_handler.rs  sous_famille.rs  sync_handler.rs  (+3 more)
(+26 files in other folders)
