[package]
name = "api_whataa"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
uuid = { version = "1", features = ["v4"] }
argon2 = "0.4"
jsonwebtoken = "8"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = "0.3"

tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
anyhow = "1"
dotenvy = "0.15"

sqlx-cli = { version = "0.7", package = "sqlx-cli" }
chrono = { version = "0.4", features = ["serde"] }