[package]
name = "api_whataa"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
uuid = { version = "1", features = ["v4"] }
argon2 = "0.4"
jsonwebtoken = "8"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = "0.3"

tower = "0.4"
tower-http = { version = "0.6.6", features = ["trace","fs"] }
anyhow = "1"
dotenvy = "0.15"

sqlx-cli = { version = "0.8.6", package = "sqlx-cli" }
chrono = { version = "0.4", features = ["serde"] }
axum-extra = { version = "0.10", features = ["multipart"] }#upload file
calamine = "0.30.1" # pour lire Excel
rust_decimal = { version = "1.39.0", features = ["serde"] }
bigdecimal = "0.4.9"
